tests/neg/i14966.check
-- Error: tests/neg/i14966.scala:10:9 ----------------------------------------------------------------------------------
10 |  export s.*  // error
   |  ^^^^^^^^^^
   |  Clashing exports: The exported
   |       method f: (x: List[Int]): Int
   |  and  method f²: (x: List[String]): Int
   |  have the same signature after erasure and overloading resolution could not disambiguate.
   |
   |  where:    f  is a method in trait S
   |            f² is a method in trait I
